8-7-20:
- Added validation for timer entry
- Disable entries when timer is non-stopped
8-8-20:
- Added stopwatch module and functionality
- Added module for settings (colors and fonts)
- Added module for locals (contains constants such as RUNNING, PAUSED, STOPPED)
- Renamed productivitytimer.py to timer.py
- Fixed timer app functionality
- Timer app now pauses when cancel prompt open
- Added titles to stopwatch and timer windows
- Added sound effect to timer
8-9-20:
- Fixed typo in check_for_weed easter egg method
- Added sixty_nine_test easter egg method