@@ -4,3 +4,6 @@ PAUSED = "paused"
 
 MANUAL = "manual"
 AUTOMATIC = "automatic"
+
+WEED = 'weed'
+SIXTY_NINE = 'sixty_nine'
