@@ -13,3 +13,4 @@
 8-9-20:
 - Fixed typo in check_for_weed easter egg method
 - Added sixty_nine_test easter egg method
+- Fixed bug where after entering in 420 or 69, then running the timer normally, the the sound upon the timers rundown would be the previously activated easter_egg sound rather than the ding. I did this by creating two new modes called WEED and SIXTY_NINE. I then created a new method to select and load the correct mp3 file based on the mode.
